pyez 2.0 release examples

--- a/pyez/PyEZ_2_0_0.ipynb
+++ b/pyez/PyEZ_2_0_0.ipynb
@@ -522,6 +522,472 @@
     "sw install was successful, Doing a reboot\n",
     "INFO:jnpr.junos.tty_netconf:Calling rpc: <rpc><request-reboot><in>0</in><both-routing-engines/></request-reboot></rpc>```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python 3.x support\n",
+    "\n",
+    "## PyEZ now run on Python >=3.4 apart from 2.6 & 2.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from jnpr.junos import Device\n",
+    "from pprint import pprint\n",
+    "from lxml import etree\n",
+    "\n",
+    "with Device('10.221.150.67', user='xxxx', password='xxxx', gather_facts=True)as dev:\n",
+    "    pprint (dev.facts)\n",
+    "    print (dev.cli(\"show version\", format='text', warning=False))\n",
+    "    op = dev.rpc.get_interface_information(interface_name='fxp0')\n",
+    "    print (etree.tounicode(op))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Structured Resource\n",
+    "\n",
+    "### Structured resource enables user to define a resource in a configuration yml file using tables and views. \n",
+    "### The table/view definition can be customized as per user needs. \n",
+    "### Configuration yml file is used by PyEZ framework to dynamically create configuration classes which           allows user to programmatically configure and manage JUNOS device."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from jnpr.junos import Device\n",
+    "from jnpr.junos.factory.factory_loader import FactoryLoader\n",
+    "import yaml\n",
+    "\n",
+    "dev = Device('xxx', user='xxx', password='xxx')\n",
+    "dev.open()\n",
+    "\n",
+    "yaml_data = \\\n",
+    "    \"\"\"---\n",
+    "    UserTable:\n",
+    "      set: system/login/user\n",
+    "      key-field:\n",
+    "        user: name\n",
+    "      view: userView\n",
+    "    userView:\n",
+    "      groups:\n",
+    "        auth: authentication\n",
+    "      fields:\n",
+    "        user: name\n",
+    "        uid: uid\n",
+    "        class_name: class\n",
+    "        uidgroup: uid\n",
+    "        fullgroup: full-name\n",
+    "      fields_auth:\n",
+    "        password: encrypted-password\n",
+    "      \"\"\"\n",
+    "globals().update(FactoryLoader().load(yaml.load(yaml_data)))\n",
+    "\n",
+    "# Create object of UserTable\n",
+    "gt = UserTable(dev)\n",
+    "\n",
+    "# Set field values\n",
+    "gt.user = 'TestUser_1'\n",
+    "gt.uid = 1346\n",
+    "gt.class_name = 'superuser'\n",
+    "gt.password = 'xxxxx'\n",
+    "\n",
+    "# Create xml to be loaded\n",
+    "gt.append()\n",
+    "\n",
+    "# print xml to be loaded\n",
+    "print (etree.tounicode(intf.get_table_xml(), pretty_print=True))\n",
+    "\n",
+    "\n",
+    "# lock->commit->unlock configuration\n",
+    "gt.set()\n",
+    "\n",
+    "# Read data from device (using existing get() method)\n",
+    "gt.get()\n",
+    "for item in gt:\n",
+    "    print 'name:', item.user\n",
+    "    print 'uid:', item.uid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Another example to configure interface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from jnpr.junos import Device\n",
+    "from jnpr.junos.factory.factory_loader import FactoryLoader\n",
+    "import yaml\n",
+    "\n",
+    "dev = Device('xxx', user='xxx', password='xxx')\n",
+    "dev.open()\n",
+    "\n",
+    "yaml_data = \\\n",
+    "    \"\"\"---\n",
+    "  InterfaceTable:\n",
+    "    set: interfaces/interface\n",
+    "    key-field:\n",
+    "      - name\n",
+    "      - unit_name\n",
+    "    view: InterfaceView\n",
+    "\n",
+    "  InterfaceView:\n",
+    "    groups:\n",
+    "      unit: unit\n",
+    "      bridge: unit/family/bridge\n",
+    "    fields:\n",
+    "      name: name\n",
+    "      native_vlan: native-vlan-id\n",
+    "    fields_unit:\n",
+    "      unit_name  : { 'name' : { 'default' : 0 } }\n",
+    "      desc       : description\n",
+    "    fields_bridge:\n",
+    "      mode: interface-mode\n",
+    "      vlan_list: vlan-id-list\n",
+    "   \"\"\"\n",
+    "\n",
+    "globals().update(FactoryLoader().load(yaml.load(yaml_data)))\n",
+    "\n",
+    "intf = InterfaceTable(dev)\n",
+    "\n",
+    "intf.name = \"ge-0/0/1\"\n",
+    "intf.mode = \"trunk\"\n",
+    "intf.vlan_list = [510, 520, 530]\n",
+    "intf.native_vlan = 510\n",
+    "intf.desc = \"l2-interface created\"\n",
+    "\n",
+    "# append record\n",
+    "intf.append()\n",
+    "\n",
+    "print (etree.tounicode(intf.get_table_xml(), pretty_print=True))\n",
+    "\n",
+    "intf.lock()\n",
+    "intf.load()\n",
+    "\n",
+    "if intf.commit_check():\n",
+    "    intf.commit(sync=True)\n",
+    "else:\n",
+    "    intf.rollback()\n",
+    "\n",
+    "intf.unlock()\n",
+    "\n",
+    "int = intf.get()\n",
+    "for item in int:\n",
+    "    print('name: ', item.name)\n",
+    "    print('unit_name: ', item.unit_name)\n",
+    "    print('vlan_list: ', item.vlan_list)\n",
+    "    print('mode: ', item.mode)\n",
+    "    print('native_vlan: ', item.native_vlan)\n",
+    "    print('description: ', item.desc)\n",
+    "\n",
+    "dev.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Output\n",
+    "```\n",
+    "<configuration>\n",
+    "  <interfaces>\n",
+    "    <interface>\n",
+    "      <name>ge-0/0/1</name>\n",
+    "      <unit>\n",
+    "        <name>0</name>\n",
+    "        <family>\n",
+    "          <bridge>\n",
+    "            <vlan-id-list>510</vlan-id-list>\n",
+    "            <vlan-id-list>520</vlan-id-list>\n",
+    "            <vlan-id-list>530</vlan-id-list>\n",
+    "            <interface-mode>trunk</interface-mode>\n",
+    "          </bridge>\n",
+    "        </family>\n",
+    "        <description>l2-interface created</description>\n",
+    "      </unit>\n",
+    "      <native-vlan-id>510</native-vlan-id>\n",
+    "    </interface>\n",
+    "  </interfaces>\n",
+    "</configuration>\n",
+    "\n",
+    "name:  ge-0/0/1\n",
+    "unit_name:  0\n",
+    "vlan_list:  ['510', '520', '530']\n",
+    "mode:  trunk\n",
+    "native_vlan:  510\n",
+    "description:  l2-interface created\n",
+    "name:  ge-0/0/2\n",
+    "unit_name:  None\n",
+    "vlan_list:  None\n",
+    "mode:  None\n",
+    "native_vlan:  None\n",
+    "description:  None\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## User can use pre defined Structured resources too\n",
+    "\n",
+    "### That can be found at jnpr.junos.resources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from jnpr.junos import Device\n",
+    "from jnpr.junos.resources.interface import InterfaceTable\n",
+    "\n",
+    "dev = Device(host='xx.xxx.xxx.xx', user='xxxx', password='xxxx', gather_facts=False)\n",
+    "dev.open()\n",
+    "\n",
+    "intf = InterfaceTable(dev)\n",
+    "\n",
+    "intf.name = \"ge-1/1/5\"\n",
+    "intf.unit_name = 0\n",
+    "intf.disable = True\n",
+    "intf.mode = \"trunk\"\n",
+    "intf.vlan_list = [510, 520, 530]\n",
+    "intf.native_vlan = 510\n",
+    "intf.desc = \"l2-interface created\"\n",
+    "intf.append()\n",
+    "intf.load()\n",
+    "intf.pdiff()\n",
+    "intf.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# JSON Config load\n",
+    "## For devices >=16.1, user can also load JSON config apart from xml/set/text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from jnpr.junos import Device\n",
+    "\n",
+    "dev = Device(host='xx.xxx.xxx.xx', user='xxxx', password='xxxx', gather_facts=False)\n",
+    "dev.open()\n",
+    "\n",
+    "cnf = \"\"\"{\n",
+    "    \"configuration\" : {\n",
+    "        \"system\" : {\n",
+    "            \"services\" : {\n",
+    "                \"telnet\" : [null]\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\"\"\"\n",
+    "\n",
+    "cu = Config(dev)\n",
+    "op = cu.load(cnf, format='json')\n",
+    "print etree.tostring(op)\n",
+    "dev.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FTP Utility\n",
+    "## Option to use FTP apart from using SCP "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from jnpr.junos import Device\n",
+    "from jnpr.junos.utils.ftp import FTP\n",
+    "\n",
+    "dev = Device(host='xx.xxx.xxx.xx', user='xxxx', password='xxxx', gather_facts=False)\n",
+    "dev.open()\n",
+    "\n",
+    "with FTP(dev) as ftp:\n",
+    "    ftp.put('/var/tmp/test.txt', '/var/tmp/test.txt')\n",
+    "\n",
+    "dev.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multi RPC error\n",
+    "## If the config being loaded got more then 1 error/warning, PyEZ will give all error details to the user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from jnpr.junos import Device\n",
+    "from jnpr.junos.utils.config import Config\n",
+    "\n",
+    "dev = Device(host='xx.xxx.xxx.xx', user='xxxx', password='xxxx', gather_facts=False)\n",
+    "dev.open()\n",
+    "\n",
+    "cnf = \\\n",
+    "\"\"\"set interfaces xe-0/0/10 ether-options 802.3ad ae10\n",
+    "et interfaces xe-0/0/11 ether-options 802.3ad ae11\n",
+    "set interfaces xe-0/0/12 ether-options 802.3ad lcap force-up\n",
+    "set interfaces xe-0/0/14 ether-options 802.3ad ae14\"\"\"\n",
+    "cu = Config(dev)\n",
+    "try:\n",
+    "    cu.load(cnf, format='set')\n",
+    "    cu.commit()\n",
+    "except Exception as ex:\n",
+    "    print ex.errs\n",
+    "    print ex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Output\n",
+    "```\n",
+    "[{'source': None, 'message': 'syntax error', 'bad_element': 'ether-options', 'severity': 'error'}, \n",
+    " {'source': None, 'message': 'unknown command', 'bad_element': 'et', 'severity': 'error'}, \n",
+    " {'source': None, 'message': 'syntax error', 'bad_element': 'ether-options', 'severity': 'error'}, \n",
+    " {'source': None, 'message': 'syntax error', 'bad_element': 'ether-options', 'severity': 'error'}] \n",
+    "\n",
+    "ConfigLoadError(severity: error, bad_element: ether-options, message: error: syntax error\n",
+    "error: unknown command\n",
+    "error: syntax error\n",
+    "error: syntax error)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Config utils: support \"private\" and \"dynamic\" database access"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from jnpr.junos import Device\n",
+    "from jnpr.junos.utils.config import Config\n",
+    "\n",
+    "dev = Device(host='xx.xxx.xxx.xx', user='xxxx', password='xxxx', gather_facts=False)\n",
+    "dev.open()\n",
+    "\n",
+    "with Config(dev, mode='private') as cu:  \n",
+    "    cu.load('set system services netconf traceoptions file test.log', format='set')\n",
+    "    cu.pdiff()\n",
+    "    cu.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# StartShell->run return value changes\n",
+    "\n",
+    "\n",
+    "### It used to return list of lines of command output\n",
+    "\n",
+    "```python\n",
+    "with StartShell(dev) as ss:\n",
+    "    print ss.run(\"cli -c 'show version | no-more'\")\n",
+    "```\n",
+    "    Output:\n",
+    "```\n",
+    "[\"cli -c 'show version | no-more'\", '\\r\\r\\n', 'Hostname: choc-mx240-k\\r\\nModel: mx240\\r\\n', 'Junos: 13.3R2.7\\r\\n', 'JUNOS....., .....]\n",
+    "```\n",
+    "\n",
+    "### Post PyEZ 2.0 it will return tuple of (last_ok, string on command output)\n",
+    "\n",
+    "```python\n",
+    "with StartShell(dev) as ss:\n",
+    "    print ss.run(\"cli -c 'show version | no-more'\")\n",
+    "```\n",
+    "\n",
+    "    output:\n",
+    "```\n",
+    "(True, u\"cli -c 'show version | no-more'\\r\\r\\nHostname: choc-mx240-k\\r\\nModel: mx240\\r\\nJunos...........\")\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "with StartShell(dev) as ss:\n",
+    "    print ss.run(\"cli -c 'show version | no-more'\")[1]\n",
+    "```\n",
+    "\n",
+    "    output:\n",
+    "```\n",
+    "cli -c 'show version | no-more'\n",
+    "Hostname: choc-mx240-k\n",
+    "Model: mx240\n",
+    "Junos: 13.3R2.7\n",
+    "JUNOS Base OS boot [13.3R2.7]\n",
+    "JUNOS Base OS Software Suite [13.3R2.7]\n",
+    "--------------\n",
+    "--------------\n",
+    "--------------\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Many other feature enhancements & Bug fixes"
+   ]
   }
  ],
  "metadata": {
